fix teacher cards alignment

--- a/src/styles/_student-card.scss
+++ b/src/styles/_student-card.scss
@@ -147,3 +147,7 @@ $avatar-size: 5.75rem;
 .divider-vertical {
   border-left-color: $color-default;
 }
+
+.teacher-card.row {
+  margin: 0
+}
